--- a/projeto-orientacao-objeto/features/Gemfile
+++ b/projeto-orientacao-objeto/features/Gemfile
@@ -1,7 +1,11 @@
 source "https://rubygems.org"
-gem 'cucumber'
+gem "cucumber", "~> 3.2.0"
 gem 'capybara'
 gem 'faker'
 gem 'selenium-webdriver'
 gem 'rspec'
 gem 'yaml'
+gem 'report_builder'
+gem 'pry'
+gem 'ffi'
+gem 'rufo'
